# market-fit-trace-agent

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  ARIZE_PHOENIX_PLAN.md  DATA_MODEL.md  DEMO_SCRIPT.md  DEVPOST_SUBMISSION_DRAFT.md  Dockerfile  FINAL_CHECK.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP_CONTRACT.md  Makefile  NEW_SESSION_PROMPT.md  PLANS.md  PROJECT_SPEC.md  PUBLIC_REPO_BOUNDARY.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  adk_runtime.py  agent.py  candidate_review.py  candidate_triage.py  config.py  evals.py  golden_replay.py  json_utils.py  ledger.py  main.py  market_data.py  market_provider.py  models.py  phoenix_annotations.py  phoenix_mcp.py  prompts.py  run_candidates.py  source_candidates.py  tracing.py  ui.py  workflow.py
docs/: arize-ax-screenshot-captions.md  demo-golden-trio.md  deploy-cloud-run.md  evals.md  final-demo-script.md  golden-promotion.md  phoenix-value-proof.md  poly-data-provider-contract.md  regression-risk-coverage.md  ui-workflow-spec.md  veo-intro-prompt.md
evals/: golden_intake_report.md  seed_cases.json
market_fit_adk/: agent.py  requirements.txt
mcp/: ledger_server.py  phoenix_mcp_config.example.json
scripts/: backfill_candidate_rules.py  build_governance_50_manifest.py  build_policy_change_proposal.py  build_policy_review_batch.py  build_stress_appendix.py  build_stress_dataset.py  check_phoenix_trace.py  deploy_adk_cloud_run.sh  ensure_phoenix_annotation_configs.py  export_candidate_review_dataset.py  export_failure_eval_candidate.py  intake_goldens.py  (+13 more)
(+406 files in other folders)
