[project]
name = "market-fit-trace-agent"
version = "0.1.0"
description = "A Gemini-powered, Phoenix-instrumented agent for auditing prediction-market thesis matches."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Market Fit Trace Agent contributors" }]
dependencies = [
  "arize-phoenix-otel>=0.16.0",
  "arize-phoenix-client>=1.0.0",
  "fastapi>=0.115.0",
  "google-adk>=1.17.0",
  "mcp>=1.9.0",
  "openinference-instrumentation-google-adk>=0.1.0",
  "openinference-instrumentation-mcp>=0.1.0",
  "opentelemetry-api>=1.33.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "streamlit>=1.35.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "market_fit_adk*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
